several processes working

--- a/MPI_tutorials.ipynb
+++ b/MPI_tutorials.ipynb
@@ -82,21 +82,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from collections import deque\n",
+    "o = deque()\n",
+    "for i in range (5):\n",
+    "    o.append(i)\n",
+    "b = deque()\n",
+    "b.append(o)\n",
+    "b.append(o)\n",
+    "b.append(o)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "deque([0, 1, 2, 3, 4, deque(...)])"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "TypeError",
+     "evalue": "sequence index must be integer, not 'slice'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-22-5278c7cffe45>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mb\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m: sequence index must be integer, not 'slice'"
+     ]
     }
    ],
-   "source": []
+   "source": [
+    "b[0:]"
+   ]
   },
   {
    "cell_type": "code",
