--- a/testing files/Untitled.ipynb
+++ b/testing files/Untitled.ipynb
@@ -153,31 +153,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = [[]]*6"
+    "import numpy as np\n",
+    "data = np.array([[3,2,4],[3,23,3]])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[[], [], [], [], [], []]"
+       "(2, 3)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data"
+    "data.shape"
    ]
   },
   {
